--- a/nav.html
+++ b/nav.html
@@ -11,16 +11,54 @@
     .container {
         border: 1px solid black;
         height: 60px;
-        width: 800px;
+        width: 900px;
         display: flex;
         justify-content: space-between;
         background-color: aqua;
     }
-    nav{
+
+    nav {
         margin-top: 20px;
     }
-    a{
+
+    a {
         margin: 20px;
+    }
+
+    .boxA {
+        display: flex;
+        justify-content: space-between;
+        /* border: 1px solid black; */
+        margin: 20px;
+        background-color: aqua;
+    }
+
+    .boxB {
+
+        border: 1px solid black;
+        margin: 20px;
+        background-color: aqua;
+    }
+
+    .box1 {
+        height: 300px;
+        width: 500px;
+        margin: 20px;
+        background-color: rgb(255, 0, 119);
+        border: 1px solid black;
+    }
+
+    .box2 {
+        height: 300px;
+        width: 500px;
+        margin: 20px;
+        border: 1px solid black;
+    }
+
+    .boxB1 {
+        height: 300px;
+        width: 800px;
+
     }
 </style>
 
@@ -29,11 +67,23 @@
         <p>Lorem ipsum</p>
         <nav>
 
-<a  href="#Home">Home</a>
-<a href="#About">About</a>
-<a href="#Home">Home</a>
+            <a href="#Home">Home</a>
+            <a href="#About">About</a>
+            <a href="#Home">Home</a>
 
         </nav>
+
+
+    </div>
+    <div class="boxA">
+        <div class="box1"></div>
+        <div class=" box2"></div>
+
+
+    </div>
+    <div class="boxB">
+        <div class="boxB1"></div>
+
 
 
     </div>
