--- a/nav.html
+++ b/nav.html
@@ -60,11 +60,19 @@
         width: 800px;
 
     }
+    .h:hover{
+        color: red;
+        font-size: large;
+    }
+    a:hover{
+        color: rgb(0, 255, 68);
+        font-size: xx-large;
+    }
 </style>
 
 <body>
     <div class="container">
-        <p>Lorem ipsum</p>
+        <p class="h">Lorem ipsum</p>
         <nav>
 
             <a href="#Home">Home</a>
